Fixed possible issues on Windows.